--- a/GitHubAntiCorruptionAPI/appsettings.json
+++ b/GitHubAntiCorruptionAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "GitHub": {
-    "AccessToken": "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"
+    "AccessToken": "access-token"
   }
 }
